lecture/01_Einfuehrung/listings/synError_Listing.txt
File "andererTest.py", line 2
   print("ende")
       ^
SyntaxError: invalid syntax
